# ISP_HW_4

./: .gitignore  CMakeLists.txt  README.md  dxgn.config
assets/: call.txt  call_jmp_mix.txt  discriminant  discriminant_assembled  if.txt  jmp.txt  simple.txt
src/: CMakeLists.txt  assembler.cpp  assembler.h  checks.h  disassebmler.cpp  disassebmler.h  disassembler.cpp  disassembler.h  main.cpp  main_asm.cpp  main_cpu.cpp  main_disasm.cpp  processor.cpp  processor.h  unbreakable_stack.h
test/: CMakeLists.txt  CMakeLists.txt.in
